--- a/forAGOL/forGallery/index.html
+++ b/forAGOL/forGallery/index.html
@@ -107,37 +107,37 @@
           </div>
 
           <!-- Map Section -->
-          <div id="mapContainer" dojotype="dijit.layout.BorderContainer" region="center" gutters="false">
+          <div id="mapContainer" dojotype="dijit.layout.BorderContainer" region="center" gutters="false" dir="ltr">
           	<div id="mapCon0" class="mapCon" dojotype="dijit.layout.ContentPane" region="left" style="width:33%">
             	<div id="legendCon0" class="legendCon">
-	                <div id="legend0" class="legend"></div>
+	                <div id="legend0" class="legend" dir="ltr"></div>
                 </div>
                 <div id="mapDiv0" class="map">
                 	<div id="legToggle0" class="legToggle" onClick="legendToggle()"><span id="legText"></span> ▼</div>
                     <div id="desToggle0" class="desToggle" onClick="descriptionToggle()"><span id="desText"></span> ▼</div>
                 </div>
                 <div id="discriptionCon0" class="descriptionCon">
-	                <div id="description0" class="description"></div>
+	                <div id="description0" class="description" dir="ltr"></div>
                 </div>
             </div>
             <div id="mapCon1" class="mapCon" dojotype="dijit.layout.ContentPane" region="center">
             	<div id="legendCon1" class="legendCon">
-	                <div id="legend1" class="legend"></div>
+	                <div id="legend1" class="legend" dir="ltr"></div>
                 </div>
                 <div id="mapDiv1" class="map">
                 </div>
                 <div id="descriptionCon1" class="descriptionCon">
-	                <div id="description1" class="description"></div>
+	                <div id="description1" class="description" dir="ltr"></div>
                 </div>
             </div>
             <div id="mapCon2" class="mapCon" dojotype="dijit.layout.ContentPane" region="right" style="width:33%">
             	<div id="legendCon2" class="legendCon">
-	                <div id="legend2" class="legend"></div>
+	                <div id="legend2" class="legend" dir="ltr"></div>
                 </div>
                 <div id="mapDiv2" class="map">
                 </div>
                 <div id="descriptionCon2" class="descriptionCon">
-	                <div id="description2" class="description"></div>
+	                <div id="description2" class="description" dir="ltr"></div>
                 </div>
             </div>
           </div>
